syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

package ClinicServiceProtos;

service AuthenticateService{
	rpc Login(AuthenticationRequestGRPC) returns (AuthenticationResponseGRPC);
	rpc GetSession(GetSessionRequestGRPC) returns (GetSessionResponseGRPC);
}

message GetSessionRequestGRPC {
}

message GetSessionResponseGRPC {
    SessionContext sessionContext = 1;
}

message AuthenticationRequestGRPC {
        string userName = 1;
        string password = 2;
}

message AuthenticationResponseGRPC {
    int32 status = 1;
    SessionContext sessionContext = 2;
}

message SessionContext{
    int32 sessionId = 1;
    string sessionToken = 2;
    AccountDto account = 3;
}

message AccountDto
{
    int32 accountId = 1;
    string eMail = 2;
    bool locked = 3;
    string firstName = 4;
    string lastName = 5;
    string secondName = 6;
}
